force-app/main/default/objects/bpats__Contact_List__c/bpats__Contact_List__c.object-meta.xml
<CustomObject>
    <label>Contact List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>