force-app/main/default/objects/bpats__Contact_List__c/fields/bpats__Candidate_Ids__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate_Ids__c</fullName>
    <label>Candidate Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>