force-app/main/default/objects/bpats__Contact_List__c/fields/bpats__Contact_List_View__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact_List_View__c</fullName>
    <label>Contact List View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Split View</fullName>
                <default>true</default>
                <label>Split View</label>
            </value>
            <value>
                <fullName>Table View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>