force-app/main/default/objects/bpats__Contact_List__c/fields/bpats__Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>bpats__Fields_To_Display__c</fullName>
    <label>Fields To Display</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>