force-app/main/default/objects/bpats__Contact_List__c/fields/bpats__Sorting_Field__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sorting_Field__c</fullName>
    <label>Sorting Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>