force-app/main/default/objects/bpats__Contact_List__c/fields/bpats__Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sorting_Order__c</fullName>
    <label>Sorting Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>