force-app/main/default/objects/bpats__Contact_List__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__Sorting_Field__c</columns>
    <columns>bpats__Sorting_Order__c</columns>
    <columns>bpats__Fields_To_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>